syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.HelloWorld";
option java_outer_classname = "HelloWorldProto";

package example1;

service Greeter {
    rpc SayHello(HelloRequest) returns (HelloReply) {}
}

message HelloRequest {
    string name = 1;
}

message HelloReply {
    string message = 1;
}
